--- a/config/vit.yml
+++ b/config/vit.yml
@@ -18,7 +18,7 @@ INPUT:
   PIXEL_MEAN: [0.5, 0.5, 0.5]
   PIXEL_STD: [0.5, 0.5, 0.5]
   LGT: # Local Grayscale Transfomation
-    DO_LGT: True
+    DO_LGT: False
     PROB: 0.5
 
 DATASETS:
